# flesh-and-blood

./: .dockerignore  .gitignore  README.md  Taskfile.yml  convert.sh  pyproject.toml
apps/fab-image-classifier/: pyproject.toml
apps/fab-image-classifier/src/fab_image_classifier/: __main__.py
apps/fab-image-converter/: Taskfile.yml
apps/fab-image-converter/src/: convert-fab-original-webp-to-png.sh
apps/fab-image-details-extractor/: Dockerfile  Taskfile.yml  pyproject.toml
apps/fab-image-details-extractor/src/fab_extract/: __main__.py  card_classifier.py  card_config.py
apps/fab-image-details-extractor/src/fab_image_details_extractor/: __main__.py  card_classifier.py  card_config.py  card_details_extractor.py.bak  types.py
apps/fab-image-format-converter/: Taskfile.yml
apps/fab-image-format-converter/src/: convert-fab-original-webp-to-png.sh
apps/fab-image-scraper/: Dockerfile  README.md  Taskfile.yml  pyproject.toml
apps/fab-image-scraper/scripts/: build-docker-image-scraper.sh  scrape-images-from-page.sh
apps/fab-image-scraper/src/fab_image_scraper/: __main__.py  scrape_images.py
apps/fab-image-segmentation/: Dockerfile  Taskfile.yml  pyproject.toml
apps/fab-image-segmentation/src/fab_image_segmentation/: card_config.py  card_segmentation.py
apps/fab-image-trainer/: Dockerfile  Taskfile.yml  labels.txt  pyproject.toml
apps/fab-scraper/: Dockerfile  README.md  Taskfile.yml  pyproject.toml
apps/fab-scraper/src/fab_preparator/: __main__.py  converter.py  logs.py
apps/fab-scraper/src/fab_scraper/: __main__.py
apps/fab-seedeer/: Taskfile.yml  go.mod  go.sum
apps/fab-seedeer/migrations/: 000001_create_cards_tables.down.sql  000001_create_cards_tables.up.sql
apps/fab-seeder/: docker-compose.yml
apps/fab-seeder/migrations/: 000001_create_cards_tables.up.sql
apps/fab-seeder/src/: main.go
apps/fab-seeder/src/textextracts/: textextracts.go
apps/fab-text-extractor/: Taskfile.yml  pyproject.toml
apps/fab-text-extractor/src/common/: __init__.py  text_extractor_logger.py  text_extractor_store.py  text_extracts_db.py
apps/fab-text-extractor/src/fab_bootstrap/: __main__.py  logs.py  store.py
apps/fab-text-extractor/src/fab_extract/: __main__.py  card_classifier.py  types.py
archive/fab-image-converter/: Dockerfile  Taskfile.yml
archive/fab-image-converter/src/: convert-fab-original-webp-to-png.sh
archive/fab-image-segmentation/: Taskfile.yml  pyproject.toml
archive/fab-image-segmentation/src/fab_image_segmentation/: __main__.py  card_segmentation.py
archive/fab-image-trainer/: config.yaml  pyproject.toml
archive/fab-image-trainer/src/fab_image_trainer/: __main__.py  train.py
docker/: Dockerfile.image-scraper
fab-app/: docker-compose.yml
fab-app/backend/: Dockerfile  go.mod  go.sum
fab-app/backend/cmd/api/: main.go
fab-app/backend/internal/api/: handlers.go  router.go
fab-app/backend/internal/config/: config.go
fab-app/backend/internal/database/: db.go
fab-data/: .gitignore
fab-data/fab-scraper/: Dockerfile  Taskfile.yml
fab-data/fab-scraper/src/fab_scraper/: scrape_images.py
fab-data/fab-seeder/: Dockerfile  docker-compose.yml
fab-data/fab-seeder/migrations/: 000001_create_cards_tables.down.sql
fab-data/fab-seeder/src/: main.go
fab-data/fab-text-extractor/: Dockerfile  pyproject.toml
src/flesh_and_blood/common/: logging_config.py  utils.py
src/flesh_and_blood/scripts/: scrape_images.py  train_model.py
taskfile-scripts/: build-docker-image-scraper.sh
