[project]
name = "fab-image-classifier"
version = "0.1.0"
description = "Add your description here"
authors = [{name = "GaborZeller", email = "gabriel.d.celery@gmail.com"}]
packages = [{ include = "fab_image_classifier", from = "src" }]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "torch (>=2.7.0,<3.0.0)",
    "scikit-learn (>=1.6.1,<2.0.0)",
    "torchvision (>=0.22.0,<0.23.0)"
]
