[project]
name = "fab_image_scraper"
version = "0.1.0"
description = ""
authors = [
    {name = "GaborZeller",email = "gabriel.d.celery@gmail.com"}
]
packages = [{ include = "fab_image_scraper", from = "src" }]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiohttp (>=3.11.18,<4.0.0)",
    "requests (>=2.32.3,<3.0.0)",
    "python-json-logger (>=3.3.0,<4.0.0)",
    "bs4 (>=0.0.2,<0.0.3)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
