[project]
name = "fab-image-segmentation"
version = "0.1.0"
description = ""
authors = [
    {name = "GaborZeller",email = "gabriel.d.celery@gmail.com"}
]
packages = [{ include = "fab_image_segmentation", from = "src" }]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    # "opencv-python (>=4.11.0.86,<5.0.0.0)",
    # "pydantic (>=2.11.3,<3.0.0)",
    "opencv-python-headless (>=4.11.0.86,<5.0.0.0)",
    "python-json-logger (>=3.3.0,<4.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
