[project]
name = "fab-text-extractor"
version = "0.1.0"
description = ""
authors = [
    {name = "GaborZeller",email = "gabriel.d.celery@gmail.com"}
]
packages = [
    { include = "common", from = "src" },
    { include = "fab_extract", from = "src" },
    { include = "fab_bootstrap", from = "src" }
]

readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "easyocr (>=1.7.2,<2.0.0)",
    "opencv-python-headless (>=4.11.0.86,<5.0.0.0)",
    "python-json-logger (>=3.3.0,<4.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
